hphp/hack/test/typecheck/void_option.php.exp
File "void_option.php", line 12, characters 15-19:
?void is a nonsensical typehint; a function cannot both only return implicitly and return null. (Typing[4066])
